# fmu

ompi/communicator/: comm_init.c  communicator.h
ompi/include/: mpi.h.in
ompi/instance/: instance.c
ompi/mpiext/: mpiext.h
ompi/mpiext/fmu/: Makefile.am  configure.m4
ompi/mpiext/fmu/c/: Makefile.am  example  example.c  example2  example2.c  fmudata_0.txt  fmudata_11.txt  fmudata_12.txt  fmudata_2.txt  fmudata_21.txt  fmudata_22.txt  fmudata_75.txt  mat  matrixm  matrixm.c  mmult.c  mpiext_fmu_alltoall.c  mpiext_fmu_c.h  mpiext_fmu_module.c  mpiext_fmu_read.c  mpiext_fmu_write.c  sequential.c
ompi/runtime/: mpiruntime.h  ompi_mpi_init.c
opal/class/: opal_hash_table.h
